--- a/docs/docs/genai/tracing/data-model.mdx
+++ b/docs/docs/genai/tracing/data-model.mdx
@@ -1,4 +1,3 @@
-import DatabricksCallout from "@site/src/components/DatabricksCallout"
 import Tabs from "@theme/Tabs"
 import TabItem from "@theme/TabItem"
 import { APILink } from "@site/src/components/APILink";
@@ -9,7 +8,6 @@ This document provides a detailed overview of the MLflow Trace data model. Under
 
 MLflow Traces are designed to be **compatible with OpenTelemetry specifications**, a widely adopted industry standard for observability. This ensures interoperability and allows MLflow Traces to be exported and used with other OpenTelemetry-compatible systems. MLflow enhances the basic OpenTelemetry Span model by defining specific structures and attributes for Generative AI use cases, providing richer context and deeper insight into quality and performance.
 
-<DatabricksCallout docsPath="/mlflow3/genai/tracing/data-model" />
 
 ## Structure of Traces
 
@@ -270,8 +268,7 @@ Span types are a way to categorize spans within a trace. By default, the span ty
 
     # Using a built-in span type
     @mlflow.trace(span_type=SpanType.RETRIEVER)
-    def retrieve_documents(query: str):
-        ...
+    def retrieve_documents(query: str): ...
 
 
     # Setting a custom span type
@@ -290,35 +287,29 @@ Span types are a way to categorize spans within a trace. By default, the span ty
     ```python
     # Financial services
     @mlflow.trace(span_type="RISK_ASSESSMENT")
-    def assess_credit_risk(application):
-        ...
+    def assess_credit_risk(application): ...
 
 
     @mlflow.trace(span_type="FRAUD_DETECTION")
-    def detect_fraud(transaction):
-        ...
+    def detect_fraud(transaction): ...
 
 
     # Healthcare
     @mlflow.trace(span_type="DIAGNOSIS")
-    def generate_diagnosis(symptoms):
-        ...
+    def generate_diagnosis(symptoms): ...
 
 
     @mlflow.trace(span_type="TREATMENT_RECOMMENDATION")
-    def recommend_treatment(diagnosis):
-        ...
+    def recommend_treatment(diagnosis): ...
 
 
     # E-commerce
     @mlflow.trace(span_type="PRODUCT_RECOMMENDATION")
-    def recommend_products(user_profile):
-        ...
+    def recommend_products(user_profile): ...
 
 
     @mlflow.trace(span_type="INVENTORY_CHECK")
-    def check_inventory(product_id):
-        ...
+    def check_inventory(product_id): ...
     ```
   </TabItem>
 </Tabs>
