--- a/docs/docs/genai/prompt-version-mgmt/prompt-registry/evaluate-prompts.mdx
+++ b/docs/docs/genai/prompt-version-mgmt/prompt-registry/evaluate-prompts.mdx
@@ -234,7 +234,7 @@ with mlflow.start_run(run_name="prompt-evaluation"):
 
 :::tip
 
-    There are numbers of built-in metrics available in MLflow for evaluating LLMs. You can also define custom metrics including LLM-as-a-Judge. Refer to the [LLM Evaluation Metrics](/llms/llm-evaluate#llm-evaluation-metrics) for more details.
+    There are numbers of built-in metrics available in MLflow for evaluating LLMs. You can also define custom metrics including LLM-as-a-Judge. Refer to the [LLM Evaluation Metrics](/genai/eval-monitor/concepts/built-in-scorers) for more details.
 
 :::
 
