--- a/docs/docs/genai/prompt-version-mgmt/version-tracking/compare-app-versions.mdx
+++ b/docs/docs/genai/prompt-version-mgmt/version-tracking/compare-app-versions.mdx
@@ -96,12 +96,7 @@ The MLflow UI provides visual comparison tools that make this analysis intuitive
    - Metric comparisons with charts
    - Parallel coordinates plot for multi-metric analysis
 
-:::danger UI SCREENSHOTS NEEDED
-🔴 Add screenshots showing:
-
-- Model selection in experiment view
-- Compare view diff, including trace comparison
-  :::
+<!-- TODO Add screenshots showing Model selection in experiment view, Compare view diff, including trace comparison -->
 
 ## Comparing Versions with the MLflow API
 
