--- a/docs/docs/genai/prompt-version-mgmt/version-tracking/link-evaluation-results-and-traces-to-app-versions.mdx
+++ b/docs/docs/genai/prompt-version-mgmt/version-tracking/link-evaluation-results-and-traces-to-app-versions.mdx
@@ -146,13 +146,7 @@ In the MLflow UI:
 3. View linked traces in the traces tab
 4. Compare evaluation results across different model versions
 
-:::danger UI SCREENSHOTS NEEDED
-🔴 Add screenshots showing:
-
-- LoggedModel with evaluation metrics in the MLflow UI
-- Linked traces tab showing evaluation traces
-- Model comparison view with evaluation results
-  :::
+<!-- TODO: add screenshots: LoggedModel with evaluation metrics in the MLflow UI; Linked traces tab showing evaluation traces; Model comparison view with evaluation results -->
 
 ## Next Steps
 
