--- a/docs/docs/genai/prompt-version-mgmt/version-tracking/link-production-traces-to-app-versions.mdx
+++ b/docs/docs/genai/prompt-version-mgmt/version-tracking/link-production-traces-to-app-versions.mdx
@@ -213,13 +213,7 @@ To view traces from your Databricks Model Serving endpoint:
 2. Click on the "Monitoring" tab to view traces and metrics
 3. All traces are automatically linked to the specific model version serving the requests
 
-:::danger SCREENSHOT NEEDED
-🔴 Add screenshot showing:
-
-- Databricks Model Serving endpoint Monitoring tab
-- Traces linked to the deployed LoggedModel version
-- Model version information displayed in the UI
-  :::
+<!-- TODO: add screenshot: Databricks Model Serving endpoint Monitoring tab; Traces linked to the deployed LoggedModel version; Model version information displayed in the UI -->
 
 The only requirement is that your application code uses MLflow tracing (either through autologging or manual instrumentation with `@mlflow.trace`).
 
