remove dangers and move them into TODO comments
Signed-off-by: serena-ruan <serena.rxy@gmail.com>

--- a/docs/docs/genai/human-feedback/dev-annotations.mdx
+++ b/docs/docs/genai/human-feedback/dev-annotations.mdx
@@ -41,21 +41,9 @@ If you are using a Databricks Notebook, you can also perform these steps from th
 6. Click **Create** to save your label
 7. When you return to the Traces tab, your label will appear as a new column
 
-:::danger SCREENSHOT PLACEHOLDER
-🔴 TODO GIF of the above
-:::
+<!-- TODO: add GIF of the above -->
 
-## Add labels to traces via the SDK
-
-:::danger TODO
-🔴 code snippet
-:::
-
-```python
-# - query for the trace via search_traces or get it directly by ID
-# - use log_feedback
-# - use log_assessment
-```
+<!-- TODO: ## Add labels to traces via the SDK, add code snippet -->
 
 ## Next Steps
 
