--- a/docs/docs/genai/human-feedback/expert-feedback/label-existing-traces.mdx
+++ b/docs/docs/genai/human-feedback/expert-feedback/label-existing-traces.mdx
@@ -206,19 +206,7 @@ After your domain experts have completed their reviews, the collected feedback i
 
 Labels are stored as `Assessment` objects on each Trace within the Labeling Session.
 
-#### Use the MLflow UI
-
-:::danger TODO
-🔴 PLACEHOLDER
-:::
-
-#### Use the MLflow SDK
-
-This code sample will show you how to fetch all traces from the labeling session's run and extract the assessments (labels) into a Pandas DataFrame for easier analysis.
-
-```python
-# PLACEHOLDER
-```
+<!-- TODO: #### Use the MLflow UI & #### Use the MLflow SDK -->
 
 ## Next Steps
 
