--- a/docs/docs/genai/human-feedback/expert-feedback/live-app-testing.mdx
+++ b/docs/docs/genai/human-feedback/expert-feedback/live-app-testing.mdx
@@ -8,9 +8,7 @@ last_update:
 
 The MLflow Review App includes a built-in chat interface that allows domain experts to interactively test your GenAI application and provide immediate feedback. This interactive testing approach provides a natural way for experts to explore your application's capabilities, identify edge cases, and assess qualitative aspects like coherence, helpfulness, and factual accuracy.
 
-:::danger SCREENSHOT PLACEHOLDER
-🔴 PLACEHOLDER
-:::
+<!-- TODO: add screenshot -->
 
 :::important
 Review App's chat UI only works with GenAI apps that are deployed using Agent Framework. To learn how to deploy your app with Agent Framework, follow the [author agents in code](/generative-ai/agent-framework/author-agent) guide and the [deploy agent](/generative-ai/agent-framework/deploy-agent) guide. Alternatively, follow the [Agent Framework quickstart](/generative-ai/tutorials/agent-quickstart).
@@ -54,36 +52,17 @@ For domain experts to use the Chat UI, you need to configure the appropriate per
   - Users must be synced to your Databricks account with SCIM provisioning
   - Alternatively, you can manually register these users in Databricks
 
-When you set up a Chat UI session, you must grant the appropriate permissions to the deployed agent endpoint:
+When you set up a Chat UI session, you must grant the appropriate permissions to the deployed agent endpoint.
 
-```python
-# PLACEHOLDER
-```
+- Deploy your application: First, deploy your application using the Databricks Agent Framework
+- Configure the MLflow Review App: Next, set up the Review App to connect to your deployed application
+- Share the Review App URL: Once configured, share the Review App URL with your domain experts. They'll be able to:
+  - Access the chat interface through their web browser
+  - Interact with your application by typing questions
+  - Provide feedback after each response using the built-in feedback controls
+  - Continue the conversation to test multiple interactions
 
-### Step 1: Deploy Your Application
-
-First, deploy your application using the Databricks Agent Framework:
-
-```python
-# PLACEHOLDER
-```
-
-### Step 2: Configure the MLflow Review App
-
-Next, set up the Review App to connect to your deployed application:
-
-```python
-# PLACEHOLDER
-```
-
-### Step 3: Share the Review App URL
-
-Once configured, share the Review App URL with your domain experts. They'll be able to:
-
-1. Access the chat interface through their web browser
-2. Interact with your application by typing questions
-3. Provide feedback after each response using the built-in feedback controls
-4. Continue the conversation to test multiple interactions
+<!-- TODO: code snippet for each step -->
 
 ## Viewing and Analyzing Chat Feedback
 
@@ -107,21 +86,7 @@ Chat feedback is particularly valuable for:
 - Discovering edge cases and unexpected user queries
 - Assessing overall user satisfaction with your application's responses
 
-### Analyzing Chat Feedback Patterns
-
-To derive actionable insights from chat testing:
-
-```python
-# PLACEHOLDER
-```
-
-## Example: Expert Testing a Product Q&A Bot
-
-Here's how you might use the Chat UI to test a product Q&A bot:
-
-```python
-# PLACEHOLDER
-```
+<!-- TODO: add ### Analyzing Chat Feedback Patterns and code snippet -->
 
 ## Troubleshooting Chat UI Testing
 
