--- a/docs/docs/genai/tracing/quality-with-traces.mdx
+++ b/docs/docs/genai/tracing/quality-with-traces.mdx
@@ -160,7 +160,7 @@ This systematic approach ensures that your improvements have measurable impact a
 :::note Enhanced Evaluation and Monitoring
 For comprehensive GenAI evaluation capabilities including LLM-as-a-judge metrics, advanced quality scorers, and automated production monitoring, consider using [Databricks GenAI evaluation features](https://docs.databricks.com/en/generative-ai/agent-evaluation/index.html).
 
-You can get started with a [free trial today](https://signup.databricks.com/?destination_url=/ml/experiments-signup?source=TRY_MLFLOW&dbx_source=TRY_MLFLOW&signup_experience_step=EXPRESS&provider=MLFLOW) with no strings attached to try out these advanced features.
+You can get started with a [free trial today](https://signup.databricks.com/?destination_url=/ml/experiments-signup?source=OSS_DOCS&dbx_source=TRY_MLFLOW&signup_experience_step=EXPRESS&provider=MLFLOW) with no strings attached to try out these advanced features.
 
 Databricks provides advanced LLM-as-a-judge evaluation, automated quality scoring in production, comprehensive evaluation pipelines, and built-in quality and safety metrics.
 :::
