--- a/docs/docs/genai/getting-started/connect-environment.mdx
+++ b/docs/docs/genai/getting-started/connect-environment.mdx
@@ -12,7 +12,7 @@ import TabItem from "@theme/TabItem";
 This guide shows you how to connect your development environment to an MLflow Experiment. MLflow supports both OSS MLflow (self-hosted) and Managed MLflow (Databricks) environments.
 
 :::note[MLflow Experiments]
-An MLflow Experiment is the container for your GenAI application. Learn more about the Experiment and what it contains in the [data model](/genai/data-model/index) section.
+An MLflow Experiment is the container for your GenAI application. Learn more about the Experiment and what it contains in the [data model](/genai/data-model) section.
 :::
 
 ## Prerequisites
@@ -229,7 +229,7 @@ An MLflow Experiment is the container for your GenAI application. Learn more abo
 
     #### Step 2: Create a Notebook
 
-    Creating a Databricks Notebook will create an MLflow Experiment that is the container for your GenAI application. Learn more about the Experiment and what it contains in the [data model](/genai/data-model/index) section.
+    Creating a Databricks Notebook will create an MLflow Experiment that is the container for your GenAI application. Learn more about the Experiment and what it contains in the [data model](/genai/data-model) section.
 
     1. Open your Databricks workspace
     2. Go to **New** at the top of the left sidebar
