--- a/docs/docs/genai/getting-started/tracing/tracing-notebook.mdx
+++ b/docs/docs/genai/getting-started/tracing/tracing-notebook.mdx
@@ -6,7 +6,7 @@ last_update:
 
 # Tracing a GenAI App (Notebook)
 
-This quickstart helps you integrate your GenAI app with [MLflow Tracing](/genai/tracing/index) if you use a Jupyter Notebook as your development environment. If you use a local IDE, please use the [IDE quickstart](/genai/getting-started/tracing/tracing-ide) instead.
+This quickstart helps you integrate your GenAI app with [MLflow Tracing](/genai/tracing) if you use a Jupyter Notebook as your development environment. If you use a local IDE, please use the [IDE quickstart](/genai/getting-started/tracing/tracing-ide) instead.
 
 ## What you'll achieve
 
@@ -24,7 +24,7 @@ By the end of this tutorial, you will have:
 ## Step 1: Create a Jupyter Notebook
 
 :::note
-Creating a Jupyter Notebook and setting up an MLflow Experiment will be the container for your GenAI application. Learn more about the Experiment and what it contains in the [data model](/genai/data-model/index) section.
+Creating a Jupyter Notebook and setting up an MLflow Experiment will be the container for your GenAI application. Learn more about the Experiment and what it contains in the [data model](/genai/data-model) section.
 :::
 
 1. Open Jupyter Notebook or JupyterLab
@@ -69,7 +69,7 @@ Select the appropriate integration for your application:
 
 2. Create a cell in your notebook with the below code
 
-   Here, we use the [`@mlflow.trace` decorator](/genai/tracing/app-instrumentation/manual-tracing/index) that makes it easy to trace any Python application combined with the [OpenAI automatic instrumentation](/genai/tracing/integrations/openai) to captures the details of the call to the OpenAI SDK.
+   Here, we use the [`@mlflow.trace` decorator](/genai/tracing/app-instrumentation/manual-tracing) that makes it easy to trace any Python application combined with the [OpenAI automatic instrumentation](/genai/tracing/integrations/listing/openai) to captures the details of the call to the OpenAI SDK.
 
    ```python
    # Enable MLflow's autologging to instrument your application with Tracing
@@ -167,8 +167,8 @@ This simple trace already provides valuable insights into your application's beh
 
 Congratulations! You've successfully built your first GenAI application with MLflow Tracing and OpenAI.
 
-- **Learn more about Tracing**: Learn about [tracing concepts](/genai/tracing/tracing-101), [manual tracing](/genai/tracing/app-instrumentation/manual-tracing/index) for more control, [tracking users & sessions](/genai/tracing/track-users-sessions/index), and [tracking environments & context](/genai/tracing/track-environments-context/index) to your traces.
-- **Evaluate your application**: Use MLflow's [evaluation capabilities](/genai/eval-monitor/index) to measure the quality of your GenAI app.
+- **Learn more about Tracing**: Learn about [tracing concepts](/genai/tracing/tracing-101), [manual tracing](/genai/tracing/app-instrumentation/manual-tracing) for more control, [tracking users & sessions](/genai/tracing/track-users-sessions), and [tracking environments & context](/genai/tracing/track-environments-context) to your traces.
+- **Evaluate your application**: Use MLflow's [evaluation capabilities](/genai/eval-monitor) to measure the quality of your GenAI app.
 
 :::tip
 For more complex applications like RAG systems or multi-step agents, MLflow Tracing provides even more value by revealing the inner workings of each component and step.
