--- a/docs/docs/genai/prompt-version-mgmt/version-tracking/index.mdx
+++ b/docs/docs/genai/prompt-version-mgmt/version-tracking/index.mdx
@@ -9,8 +9,6 @@ import { APILink } from "@site/src/components/APILink";
 
 # Version Tracking for GenAI Applications
 
-<!-- TODO: add screenshot for LoggedModel comparison view showing linked traces -->
-
 MLflow's **<APILink fn="mlflow.entities.LoggedModel">LoggedModel</APILink>** provides a central, versioned representation of your entire GenAI application, including its code, configurations, and associated artifacts like evaluation results and traces. This enables you to effectively manage the lifecycle of complex GenAI systems, ensuring reproducibility, facilitating debugging, and enabling confident deployment of the best-performing application versions.
 
 This page introduces the core concepts of version tracking with `LoggedModel`. Subsequent pages in this section will detail specific methods for creating, managing, and utilizing these application versions.
@@ -38,9 +36,6 @@ GenAI applications are composite systems with many moving parts: code (agent log
     - **Challenge**: For compliance or when investigating production incidents, you need to know the exact state of the application that was running at a specific time.
     - **Solution**: Each `LoggedModel` version serves as an auditable record, linking to the specific code and configurations, and can be associated with traces from its execution.
 
-<!-- TODO: add Conceptual Diagram of LoggedModel for Versioning -->
-<!-- TODO: add a `LoggedModel` version acts as a central record, linking to all components of your GenAI application -->
-
 ## How <APILink fn="mlflow.entities.LoggedModel">LoggedModel</APILink> Works for Versioning
 
 A `LoggedModel` in MLflow is not just for traditional machine learning models; it's adapted to be the core of GenAI application versioning. Each distinct state of your application that you want to evaluate, deploy, or refer back to can be captured as a new version of a `LoggedModel`.
@@ -66,7 +61,7 @@ pip install --upgrade "mlflow>=3.1"
 To connect for logging to Databricks-hosted MLflow Tracking, use `pip install --upgrade "mlflow[databricks]>=3.1"` instead.
 :::
 
-Here's how to quickly version your GenAI agent and link its traces, which might be generated during interactive development or [evaluation](/genai/eval-monitor/index). This example uses `mlflow.set_active_model()` with the current git commit hash to establish a unique version context, ensuring that any generated traces are automatically associated with this specific code version.
+Here's how to quickly version your GenAI agent and link its traces, which might be generated during interactive development or [evaluation](/genai/eval-monitor). This example uses `mlflow.set_active_model()` with the current git commit hash to establish a unique version context, ensuring that any generated traces are automatically associated with this specific code version.
 
 ```python
 import mlflow
