--- a/docs/docs/genai/serving/responses-agent.mdx
+++ b/docs/docs/genai/serving/responses-agent.mdx
@@ -181,7 +181,7 @@ class SimpleResponsesAgent(ResponsesAgent):
 
 ### Logging and Serving
 
-Log your agent using the [Models-from-code](/model/models-from-code) approach. This approach is framework-agnostic and supports all authoring frameworks:
+Log your agent using the [Models-from-code](/ml/model/models-from-code) approach. This approach is framework-agnostic and supports all authoring frameworks:
 ```python
 with mlflow.start_run():
     logged_agent_info = mlflow.pyfunc.log_model(
